2012-04-07  Thomas Koenig  <tkoenig@gcc.gnu.org>

PR fortran/52893
	* frontend-passes.c:  Keep track of wether we are in an implicit
	DO loop; do not do function elimination if we are.

2012-04-07  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/52893
	* gfortran.dg/function_optimize_11.f90:  New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@186213 138bc75d-0d04-0410-961f-82ee72b054a4